# pipeline-gtmer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: keepalive.yml
dashboard/: .env.local.example  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/evals/: page.tsx
dashboard/app/for-gtmer/[slug]/: page.tsx
dashboard/app/leads/[id]/: page.tsx
dashboard/components/: LeadDetailView.tsx  WarmingBanner.tsx
dashboard/lib/: api.ts  types.ts
data/: companies_in.csv
data/golden/: golden_set.jsonl
pipeline/: __init__.py  budget.py  cache.py  cli.py  config.py  db.py  enrich.py  llm.py  models.py  runner.py  trace.py
pipeline/api/: main.py  routes.py  schemas.py
pipeline/evals/: batch_runner.py  golden.py  grounding.py  heuristics.py  judge.py  pairwise.py
pipeline/graph/: build.py  state.py
pipeline/graph/nodes/: deadletter.py  embed.py  evaluate.py  research.py  scrape.py  write.py
pipeline/prompts/: registry.py
pipeline/prompts/v1/: brief.md  email_sequence.md  grounding.md  judge_rubric.md
pipeline/prompts/v2/: email_sequence.md
pipeline/prompts/v3/: email_sequence.md
pipeline/prospector/: ats.py  qualify.py  universe.py
pipeline/researcher/: brief.py  chunker.py  embeddings.py  scraper.py
pipeline/writer/: sequence.py
supabase/migrations/: 0001_init.sql
tests/: test_ats.py  test_heuristics.py  test_qualify.py
